# all-frame

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  PUBLISHING_CHECKLIST.md  PUBLISH_v0.1.0.sh  QUALITY_GATES.md  README.md  READY_TO_PUBLISH.md  test_graphql
.claude/: TDD_CHECKLIST.md  instructions.md  settings.local.json
.claude/skills/: rust-clean-architecture.md
.github/: Dockerfile.ci  dependabot.yml
.github/workflows/: binary-size.yml  ci-image.yml  compatibility-matrix.yml  market-parity-check.yml  offline-quality-gates.yml  pages.yml
.ralph-tui/: config.toml  session-meta.json  session.json
benches/: resilience_performance.rs
crates/allframe-core/: Cargo.toml  README.md
crates/allframe-core/examples/: all_features.rs  default_features.rs  graceful_shutdown.rs  graphql_docs.rs  grpc_docs.rs  minimal.rs  protocol_agnostic.rs  scalar_docs.rs  shutdown_patterns.rs
crates/allframe-core/scripts/: measure_sizes.sh
crates/allframe-core/src/: arch.rs  cqrs.rs  lib.rs  otel.rs  shutdown.rs
crates/allframe-core/src/application/: mod.rs  resilience.rs  resilience_config.rs  resilience_observability.rs
crates/allframe-core/src/auth/: axum.rs  jwt.rs  mod.rs  tonic.rs
crates/allframe-core/src/cache/: memory.rs  mod.rs  traits.rs
crates/allframe-core/src/cqrs/: allsource_backend.rs  backend.rs  command_bus.rs  event_versioning.rs  memory_backend.rs  mod.rs  projection_registry.rs  query_bus.rs  saga.rs  saga_orchestrator.rs  sqlite_backend.rs  sync.rs
crates/allframe-core/src/di/: lazy.rs  mod.rs
crates/allframe-core/src/domain/: architectural_tests.rs  mod.rs  resilience.rs
crates/allframe-core/src/grpc/: mod.rs  server.rs  tls.rs
crates/allframe-core/src/health/: mod.rs  server.rs  types.rs
crates/allframe-core/src/otel/: builder.rs  mod.rs  testing.rs
crates/allframe-core/src/resilience/: circuit_breaker.rs  mod.rs  offline.rs  rate_limit.rs  rate_limit_redis.rs  retry.rs
crates/allframe-core/src/router/: adapter.rs  builder.rs  config.rs  contract.rs  docs.rs  graphiql.rs  graphql.rs  graphql_prod.rs  grpc.rs  grpc_explorer.rs  grpc_prod.rs  handler.rs  metadata.rs  method.rs  mod.rs  openapi.rs  rest.rs  scalar.rs  schema.rs  ts_codegen.rs
crates/allframe-core/src/security/: mod.rs  obfuscation.rs
crates/allframe-forge/: Cargo.toml  README.md
crates/allframe-forge/src/: config.rs  lib.rs  main.rs  scaffolding.rs  templates.rs  validation.rs
crates/allframe-forge/src/templates/: acl.rs  basic.rs  bff.rs  consumer.rs  gateway.rs  mod.rs  producer.rs  saga.rs  scheduled.rs  websocket.rs
crates/allframe-forge/tests/: scaffolding.rs
crates/allframe-macros/: Cargo.toml  Makefile.toml  README.md
crates/allframe-macros/src/: allframe_handler.rs  api.rs  arch.rs  cqrs.rs  di.rs  error.rs  health.rs  lib.rs  otel.rs  resilience.rs  saga.rs  security.rs  tauri_compat.rs
crates/allframe-macros/tests/: allframe_handler.rs  cqrs_macros.rs  saga_macros.rs  tauri_compat.rs
crates/allframe-mcp/: Cargo.toml  README.md
crates/allframe-mcp/examples/: forge_mcp_server.rs  mcp_server.rs  mcp_stdio_server.rs
crates/allframe-mcp/src/: lib.rs  schema.rs  server.rs  stdio.rs  tools.rs
crates/allframe-mcp/src/forge/: analyzer.rs  generator.rs  mod.rs  server.rs
crates/allframe-tauri/: Cargo.toml  README.md  build.rs
crates/allframe-tauri/examples/: boot_lifecycle.rs  tauri_plugin.rs
crates/allframe-tauri/permissions/: default.toml
crates/allframe-tauri/permissions/autogenerated/: reference.md
crates/allframe-tauri/permissions/autogenerated/commands/: allframe_call.toml  allframe_list.toml  allframe_stream.toml  allframe_stream_cancel.toml
crates/allframe-tauri/permissions/schemas/: schema.json
crates/allframe-tauri/src/: boot.rs  commands.rs  error.rs  lib.rs  plugin.rs  server.rs  types.rs
docs/: ALLSOURCE_INTEGRATION.md  ANNOUNCEMENT_DI.md  CHANGESETS_IMPLEMENTATION.md  CI_PIPELINE_FIXES_COMPLETE.md  CRATES_IO_PUBLISHING.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_UPDATES_DEC_2025.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_REFACTORING_PLAN.md  GITHUB_ACTIONS_PERMISSIONS.md  INDEX.md  LAUNCH_CHECKLIST.md  MCP_BINARY_DISTRIBUTION_RESOLUTION.md  MCP_DISTRIBUTION_MODEL.md  MCP_DOCUMENTATION_COMPLETE.md  MILESTONE_0.2_COMPLETE.md  MILESTONE_0.3_STATUS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  WARNINGS_CLEANUP.md
docs/_templates/: FOOTER.md  PHASE_COMPLETE.md.template  PRD.md.template
docs/announcements/: ANNOUNCEMENT_DI.md  API_DOCUMENTATION_COMPLETE.md  CQRS_INFRASTRUCTURE_COMPLETE.md  IGNITE_VISION_ANNOUNCEMENT.md  PHASE6_1_ROUTER_COMPLETE.md  PHASE_6_COMPLETE.md  SOCIAL_POSTS.md  TWITTER_THREAD_2025_12_01.md  TWITTER_THREAD_PHASE_6.md
docs/architecture/: RESILIENCE_ARCHITECTURE_PLAN.md
docs/archive/: CI_FIXES_SUMMARY.md  CQRS_ALLSOURCE_ASSESSMENT.md  (+7 more)
examples/: README.md  graphql_api.rs  grpc_api.rs  multi_protocol.rs  offline_desktop.rs  resilience.rs  resilient_payment_service.rs  rest_api.rs  security.rs
examples/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-desktop/src-tauri/capabilities/: default.json
examples/tauri-desktop/src-tauri/src/: main.rs
scripts/: analyze_size.sh  check_links.sh  check_size.sh  generate_changelog_html.py  inject_footer.sh  performance_check.rs  update_stats.sh
src/: lib.rs
tests/: 01_ignite_project.rs  02_di_container.rs  02_di_container_simple.rs  03_api_handler.rs  03_api_handler_simple.rs  04_router_config.rs  04_router_core.rs  04_router_graphql.rs  04_router_grpc.rs  04_router_rest.rs  05_arch_integration.rs  05_arch_layers.rs  05_arch_violations.rs  06_cqrs_commands.rs  06_cqrs_events.rs  06_cqrs_integration.rs  06_cqrs_property.rs  06_cqrs_queries.rs  07_otel_context.rs  07_otel_export.rs  07_otel_integration.rs  07_otel_metrics.rs  07_otel_tracing.rs  08_offline_first.rs  09_offline_quality_gates.rs  10_streaming_codegen.rs  10_streaming_core.rs  10_streaming_router.rs  10_streaming_tauri.rs  feature_flags.rs
(+58 files in other folders)
