
# Main allframe crate - re-exports allframe-core
[package]
name = "allframe"
version = "0.1.16"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Complete Rust web framework with built-in HTTP/2 server, REST/GraphQL/gRPC, compile-time DI, CQRS - TDD from day zero"
readme = "README.md"
[workspace]
members = [
    "crates/allframe-core",
    "crates/allframe-forge",
    "crates/allframe-macros",
    "crates/allframe-mcp",
    "crates/allframe-tauri",
]
exclude = [
    "examples/tauri-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.16"
edition = "2021"
rust-version = "1.86"  # Required for async-graphql 7.0.17
authors = ["AllFrame Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/all-source-os/all-frame"
homepage = "https://all-source-os.github.io/all-frame"
documentation = "https://docs.rs/allframe"
keywords = ["web", "framework", "api", "tdd", "clean-architecture"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]

# === Internal Workspace Crates ===
# IMPORTANT: Keep these versions in sync with workspace.package.version above!
# When releasing a new version:
#   1. Update workspace.package.version (line 73)
#   2. Update these three version strings to match
# This ensures crates.io consumers get the correct dependency versions.
allframe-core = { version = "0.1.16", path = "crates/allframe-core", default-features = false }
allframe-forge = { version = "0.1.16", path = "crates/allframe-forge" }
allframe-macros = { version = "0.1.16", path = "crates/allframe-macros" }
allframe-tauri = { version = "0.1.16", path = "crates/allframe-tauri" }
anyhow = "1.0.75"  # Minimum version for Rust 1.80+ compatibility
rusqlite = { version = "0.31", features = ["bundled"] }

# === Testing Dependencies ===
# Updated: 2025-12-04 - Latest test utilities
assert_cmd = "2.0"

# === Core Utilities ===
# Stable APIs - minor updates are safe
async-trait = "0.1"

# === CLI Dependencies ===
# Updated: 2025-12-04
clap = "4.5"
criterion = "0.5"

# === HTTP Server ===
# Updated: 2025-12-04 - HTTP/2 improvements and security fixes
hyper = { version = "1.8", features = ["full"] }
mockall = "0.13"
predicates = "3.1"
proc-macro2 = "1.0"
proptest = "1.6"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Proc Macro Dependencies ===
syn = "2.0"
tempfile = "3.15"
thiserror = "2.0"
# === Async Runtime ===
# Updated: 2025-12-04 - Latest stable for performance improvements
tokio = { version = "1.48", features = ["full"] }
trybuild = "1.0"

[[bin]]
name = "allframe"
path = "src/bin/allframe.rs"

[features]
default = ["di", "openapi", "router", "otel", "cqrs", "health"]
di = ["allframe-core/di"]
openapi = ["allframe-core/openapi"]
otel = ["allframe-core/otel"]
health = ["allframe-core/health"]
router = ["allframe-core/router"]
router-graphql = ["allframe-core/router-graphql"]
router-grpc = ["allframe-core/router-grpc"]
router-grpc-tls = ["allframe-core/router-grpc-tls"]
router-full = ["allframe-core/router-full"]
cqrs = ["allframe-core/cqrs"]
cqrs-allsource = ["allframe-core/cqrs-allsource"]
# DEPRECATED: Use cqrs-allsource instead. Will be removed in a future release.
cqrs-postgres = ["allframe-core/cqrs-postgres"]
cqrs-rocksdb = ["allframe-core/cqrs-rocksdb"]
cqrs-sqlite = ["allframe-core/cqrs-sqlite"]
offline = ["allframe-core/offline"]

# AllSource search features
vector-search = ["allframe-core/vector-search"]
keyword-search = ["allframe-core/keyword-search"]

# New modular features
resilience = ["allframe-core/resilience"]
security = ["allframe-core/security"]
http-client = ["allframe-core/http-client"]
otel-otlp = ["allframe-core/otel-otlp"]
metrics = ["allframe-core/metrics"]
cache-memory = ["allframe-core/cache-memory"]
cache-redis = ["allframe-core/cache-redis"]
rate-limit = ["allframe-core/rate-limit"]
utils = ["allframe-core/utils"]

[dependencies]
allframe-core = { workspace = true, features = ["di", "openapi", "router", "otel", "cqrs"] }
allframe-forge = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
allframe-macros = { workspace = true }
allframe-mcp = { version = "0.1.14", path = "crates/allframe-mcp" }
allframe-tauri = { workspace = true }
assert_cmd = "2.0"
async-trait = { workspace = true }
predicates = "3.0"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3.8"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = "0.1"

[[example]]
name = "resilience"
required-features = ["resilience"]

[[example]]
name = "resilient_payment_service"
required-features = ["resilience"]

[[example]]
name = "security"
required-features = ["security"]

# Test configuration for the workspace
[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true

# Release configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
