[package]
name = "allframe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The composable Rust API framework - core library"

[features]
default = ["di", "openapi", "router", "otel"]

# Core features
di = ["allframe-macros"]
openapi = []
otel = ["allframe-macros"]

# Router features
router = ["toml"]
router-graphql = ["router", "async-graphql", "async-graphql-parser"]
router-grpc = [
    "router",
    "tonic",
    "tonic-reflection",
    "prost",
    "prost-types",
    "tonic-build",
    "tokio-stream",
    "futures",
]
router-full = ["router-graphql", "router-grpc"]

# CQRS + Event Sourcing features (optional, not in default)
cqrs = ["allframe-macros"]

# AllSource Core integration (production event store)
cqrs-allsource = ["cqrs", "allsource-core"]
cqrs-postgres = ["cqrs-allsource", "allsource-core/postgres"]
cqrs-rocksdb = ["cqrs-allsource", "allsource-core/rocksdb-storage"]

[dependencies]

# Optional features
allframe-macros = { path = "../allframe-macros", optional = true }

# AllSource Core for CQRS + Event Sourcing
allsource-core = { git = "https://github.com/all-source-os/chronos-monorepo", optional = true, default-features = false }

# GraphQL support (production-ready)
async-graphql = { version = "7.0", optional = true }
async-graphql-parser = { version = "7.0", optional = true }
async-trait = { workspace = true }
futures = { version = "0.3", optional = true }
hyper = { workspace = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", optional = true }
toml = { version = "0.8", optional = true }

# gRPC/Protobuf support (production-ready)
tonic = { version = "0.14", optional = true, features = ["transport", "codegen"] }
tonic-reflection = { version = "0.14", optional = true }

[build-dependencies]
tonic-build = { version = "0.14", optional = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
