[package]
name = "allframe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "The composable Rust API framework - core library"
readme = "README.md"

[features]
default = ["di", "openapi", "router", "otel"]

# Core features
di = ["allframe-macros"]
openapi = []
otel = ["allframe-macros", "tracing"]
otel-otlp = [
    "otel",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
]

# Router features
router = ["toml"]
router-graphql = ["router", "async-graphql", "async-graphql-parser"]
router-grpc = [
    "router",
    "tonic",
    "tonic-reflection",
    "tonic-health",
    "prost",
    "prost-types",
    "tonic-build",
    "tokio-stream",
    "futures",
]
router-full = ["router-graphql", "router-grpc"]

# TLS features for gRPC
grpc-tls = ["router-grpc", "rustls-pemfile", "tokio-rustls"]

# CQRS + Event Sourcing features (optional, not in default)
cqrs = ["allframe-macros"]

# AllSource Core integration (production event store)
cqrs-allsource = ["cqrs", "allsource-core"]
cqrs-postgres = ["cqrs-allsource", "allsource-core/postgres"]
cqrs-rocksdb = ["cqrs-allsource", "allsource-core/rocksdb-storage"]

[dependencies]

# Optional features
allframe-macros = { version = "0.1.5", path = "../allframe-macros", optional = true }

# AllSource Core for CQRS + Event Sourcing
allsource-core = { version = "0.7.0", optional = true, default-features = false }

# GraphQL support (production-ready)
async-graphql = { version = "7.0", optional = true }
async-graphql-parser = { version = "7.0", optional = true }
async-trait = { workspace = true }
futures = { version = "0.3", optional = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", optional = true }
toml = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.28", optional = true }

# OpenTelemetry support
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, features = ["tonic"] }

# gRPC/Protobuf support (production-ready)
tonic = { version = "0.14", optional = true, features = ["transport", "codegen"] }
tonic-reflection = { version = "0.14", optional = true }
tonic-health = { version = "0.14", optional = true }

# TLS support
rustls-pemfile = { version = "2.0", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[build-dependencies]
tonic-build = { version = "0.14", optional = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
