[package]
name = "allframe-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "AllFrame CLI - Project scaffolding and code generation"
keywords = ["cli", "scaffold", "generator", "allframe", "web"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "allframe"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
