[package]
name = "allframe-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for AllFrame framework"
keywords = ["proc-macro", "macros", "framework", "web", "allframe"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
cqrs-test = ["allframe-core/cqrs"]

[dependencies]
async-trait = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
allframe-core = { path = "../allframe-core", features = ["cqrs"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
trybuild = { workspace = true }
