[package]
name = "allframe-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["mcp", "llm", "ai", "tools", "claude"]
categories = ["development-tools", "api-bindings"]
description = "MCP (Model Context Protocol) server for AllFrame - Expose APIs as LLM-callable tools"
readme = "README.md"

[features]
default = []
# Enable tracing-based logging for debugging
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
allframe-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }

# Optional tracing support for debugging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4"] }
