[package]
name = "tauri-desktop-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
allframe-core = { path = "../../../crates/allframe-core", features = ["router"] }
allframe-tauri = { path = "../../../crates/allframe-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["wry"] }
tauri-build = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
